# game-of-life

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_commands.json  conanfile.py  game.h  game.hpp  main.cpp  render.h  render.hpp
cmake/: fetched-lib.cmake
include/: glm  perlin_noise  stb
include/camera_header/: camera.h  camera.hpp
include/plane/: plane.hpp  simple_plane.hpp
include/shader_header/: shader.hpp
include/texture_header/: texture.h  texture.hpp
include/tile/: grid_tile.hpp  tile.h  tile.hpp
include/util/: type_name.hpp
resources/shaders/: gridShader.frag  gridShader.vert  grid_shader.frag  grid_shader.vert
shaders/: shader.vs
source/: application.hpp  camera.hpp  double_buffer_atomic.hpp  game.hpp  grid_tile.hpp  image_texture.hpp  main.cpp  plane.hpp  render.hpp  renderer.hpp  shader.hpp  simple_plane.hpp  simulation.hpp  texture.hpp  threadpool.hpp  tile.hpp  type_name.hpp  unrolled_matrix.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
